@@ -2,7 +2,8 @@ RM=rm -f
 TARGET=test
 all:
 	clear
-	g++ -std=c++20 -static -g -I . -lgomp -fopenmp main.cpp -o $(TARGET)
+#	g++ -std=c++20 -static -g -I . -lgomp -fopenmp main.cpp -o $(TARGET)
+	clang++ -std=c++20 -static -g -I . main.cpp -o $(TARGET)
 run:
 	./test
 clean:
