@@ -41,3 +41,9 @@
 * в SoftMax и ANN добавленны ассерты;
 * добавлен прототип классификатора для MNIST, вроде даже работает;
 * добавлена поддержка OpenMP;
+
+* ReLUx и тест;
+* ELU и тест;
+* метод Model::addLayer() теперь реализован через вариативный шаблон и может принимать дополнительные аргументы;
+* SELU и тест;
+* инициализация Layer;
